After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 579235 - Totem cannot play videos from FTP
Totem cannot play videos from FTP
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: GStreamer backend
2.26.x
Other Linux
: Normal normal
: ---
Assigned To: Maintainer alias for GStreamer component of Totem
Maintainer alias for GStreamer component of Totem
Depends on:
Blocks:
 
 
Reported: 2009-04-17 02:02 UTC by John Stowers
Modified: 2010-04-07 16:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
totem gstreamer dubug output (256.17 KB, text/plain)
2009-04-17 02:04 UTC, John Stowers
Details

Description John Stowers 2009-04-17 02:02:54 UTC
Hi,

Totem will not play files over ftp. Dies with "could not read from resource"

this works:
gst-launch-0.10 giosrc location=ftp://192.168.1.1/Disk-0/Videos/alternativefreedomtrailer.mov ! decodebin2 ! gconfvideosink

does not work:
totem --gst-debug=3 --gst-debug-no-color ftp://192.168.1.1/Disk-0/Videos/alternativefreedomtrailer.mov &> log

log attached, interesting line:
opening file /home/john/.gvfs/ftp on 192.168.1.1/Disk-0/Videos/alternativefreedomtrailer.mov

Appears to be trying to go through the gvfs-fuse mount and not using giosrc directly.

totem: 2.26.1
gvfs: 1.2.2
distro: Ubuntu Jaunty RC
Comment 1 John Stowers 2009-04-17 02:04:09 UTC
Created attachment 132803 [details]
totem gstreamer dubug output

totem --gst-debug=3 --gst-debug-no-color ftp://192.168.1.1/Disk-0/Videos/alternativefreedomtrailer.mov &> log
Comment 2 Bastien Nocera 2009-04-17 10:15:33 UTC
(In reply to comment #0)
> Hi,
> 
> Totem will not play files over ftp. Dies with "could not read from resource"
<snip>
> log attached, interesting line:
> opening file /home/john/.gvfs/ftp on
> 192.168.1.1/Disk-0/Videos/alternativefreedomtrailer.mov
> 
> Appears to be trying to go through the gvfs-fuse mount and not using giosrc
> directly.

That's because otherwise seeking wouldn't work one bit. This should be fixed in the latest gvfs, though I'm not sure it'll work well enough on other sources.
Comment 3 John Stowers 2009-04-19 04:46:32 UTC
(In reply to comment #2)
> (In reply to comment #0)
> > Hi,
> > 
> > Totem will not play files over ftp. Dies with "could not read from resource"
> <snip>
> > log attached, interesting line:
> > opening file /home/john/.gvfs/ftp on
> > 192.168.1.1/Disk-0/Videos/alternativefreedomtrailer.mov
> > 
> > Appears to be trying to go through the gvfs-fuse mount and not using giosrc
> > directly.
> 
> That's because otherwise seeking wouldn't work one bit. This should be fixed in
> the latest gvfs, though I'm not sure it'll work well enough on other sources.
> 

Is there a gvfs bug # I can look at for this?

What about disabling seeking on these sorts of streams, but still allowing them to play?
Comment 4 Bastien Nocera 2009-04-28 11:15:41 UTC
That's the bug:
http://bugzilla.gnome.org/show_bug.cgi?id=520244

And no, we don't want to disable seeking when it works just fine for Samba and other backends with random-access-seek working.

We should probably remove the work-around, and require a newer version of gvfs.
Comment 5 Bastien Nocera 2010-04-07 16:03:19 UTC
commit 4cdd69285b2f9fffe834b65d19876b5dc7841ef8
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Apr 7 17:01:25 2010 +0100

Use giosrc natively when playing back from FTP
        
As it will not work properly when using FUSE in between.
                
https://bugzilla.gnome.org/show_bug.cgi?id=579235