Use giosrc natively when playing back from FTP

As it will not work properly when using FUSE in between.

https://bugzilla.gnome.org/show_bug.cgi?id=579235